feat(lists): added lists features
