# src/openapi.yaml
@@ -185,6 +185,59 @@ paths:
           description: Not authenticated or invalid/expired token
         '404':
           description: User not found
+  /u/{userId}/lists:
+    get:
+      tags:
+        - user
+      summary: Retrieves lists created by a specific user
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            example: 0
+      responses:
+        '200':
+          description: A list of lists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  lists:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        name:
+                          type: string
+                        description:
+                          type: string
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Internal server error"
   /u/delete:
     post:
         tags:
@@ -684,4 +737,181 @@ paths:
                   message:
                     type: string
                     example: "Error removing friend"
-          description: Error removing friend  
+          description: Error removing friend
+  /lists/:
+    post:
+      tags:
+        - list
+      summary: Creates a new list
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+              required:
+                - name
+      responses:
+        '201':
+          description: List successfully created
+        '400':
+          description: Missing required fields
+        '500':
+          description: Error creating list
+  
+  /lists/movie/{movieId}:
+    get:
+      tags:
+        - list
+      summary: Retrieves lists that a movie is in
+      parameters:
+        - name: movieId
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
+      responses:
+        '200':
+          description: A list of lists
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  lists:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        name:
+                          type: string
+                        description:
+                          type: string
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Internal server error"
+  /lists/{listId}/{movieId}:
+    post:
+      tags:
+        - list
+      summary: Adds a movie to a list
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: listId
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
+        - name: movieId
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
+      responses:
+        '201':
+          description: Movie successfully added to list
+        '400':
+          description: Missing required fields
+        '500':
+          description: Error adding movie to list
+  /lists/{listId}:
+    get:
+      tags:
+        - list
+      summary: Retrieves movies in a specific list
+      parameters:
+        - name: listId
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            example: 0
+      responses:
+        '200':
+          description: A list of movies
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: true
+                  movies:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: integer
+                        title:
+                          type: string
+                        description:
+                          type: string
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: boolean
+                    example: false
+                  message:
+                    type: string
+                    example: "Internal server error"
+    delete:
+      tags:
+        - list
+      summary: Deletes a list
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: listId
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
+      responses:
+        '200':
+          description: List successfully deleted
+        '400':
+          description: Missing required fields
+        '404':
+          description: List not found
+        '500':
+          description: Error deleting list
